# integration_project_ecn

./: groupes.csv
integ_trajectoire/: CMakeLists.txt  package.xml
integ_trajectoire/launch/: desired_joint_states_launch.py
integ_trajectoire/src/: desired_joint_states.cpp
